Feat: Create de exceptions and tests